Fixed tag dialog on desktop on mobile and moved some scripts to separate files

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,7 +127,6 @@ main.container {
     color: white;
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.15);
-    display: inline-block;
     padding: 0 10px;
     cursor: pointer;
     user-select: none;
